src/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On LET shift to state 1
-- On INT_ANNOTATION shift to state 38
-- On IF shift to state 39
-- On ID shift to state 44
-- On FOR shift to state 51
-- On BOOL_ANNOTATION shift to state 61
-- On type_annotation shift to state 62
-- On prog shift to state 73
-- On cmd shift to state 74

State 1:
cmd -> LET . ID EQUAL expr SEMICOLON [ RBRACK LET INT_ANNOTATION IF ID FOR EOF BOOL_ANNOTATION ]
-- On ID shift to state 2

State 2:
cmd -> LET ID . EQUAL expr SEMICOLON [ RBRACK LET INT_ANNOTATION IF ID FOR EOF BOOL_ANNOTATION ]
-- On EQUAL shift to state 3

State 3:
cmd -> LET ID EQUAL . expr SEMICOLON [ RBRACK LET INT_ANNOTATION IF ID FOR EOF BOOL_ANNOTATION ]
-- On TRUE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On ID shift to state 7
-- On FALSE shift to state 9
-- On expr shift to state 36

State 4:
expr -> TRUE . [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TIMES reduce production expr -> TRUE 
-- On SEMICOLON reduce production expr -> TRUE 
-- On RSQUARE reduce production expr -> TRUE 
-- On RPAREN reduce production expr -> TRUE 
-- On RANGE_DOTS reduce production expr -> TRUE 
-- On PLUS reduce production expr -> TRUE 
-- On OR reduce production expr -> TRUE 
-- On NEQ reduce production expr -> TRUE 
-- On MINUS reduce production expr -> TRUE 
-- On LT reduce production expr -> TRUE 
-- On LEQ reduce production expr -> TRUE 
-- On GT reduce production expr -> TRUE 
-- On GEQ reduce production expr -> TRUE 
-- On EQ reduce production expr -> TRUE 
-- On AND reduce production expr -> TRUE 

State 5:
expr -> LPAREN . expr RPAREN [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TRUE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On ID shift to state 7
-- On FALSE shift to state 9
-- On expr shift to state 34

State 6:
expr -> INT . [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TIMES reduce production expr -> INT 
-- On SEMICOLON reduce production expr -> INT 
-- On RSQUARE reduce production expr -> INT 
-- On RPAREN reduce production expr -> INT 
-- On RANGE_DOTS reduce production expr -> INT 
-- On PLUS reduce production expr -> INT 
-- On OR reduce production expr -> INT 
-- On NEQ reduce production expr -> INT 
-- On MINUS reduce production expr -> INT 
-- On LT reduce production expr -> INT 
-- On LEQ reduce production expr -> INT 
-- On GT reduce production expr -> INT 
-- On GEQ reduce production expr -> INT 
-- On EQ reduce production expr -> INT 
-- On AND reduce production expr -> INT 

State 7:
expr -> ID . LSQUARE expr RSQUARE [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> ID . [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On LSQUARE shift to state 8
-- On TIMES reduce production expr -> ID 
-- On SEMICOLON reduce production expr -> ID 
-- On RSQUARE reduce production expr -> ID 
-- On RPAREN reduce production expr -> ID 
-- On RANGE_DOTS reduce production expr -> ID 
-- On PLUS reduce production expr -> ID 
-- On OR reduce production expr -> ID 
-- On NEQ reduce production expr -> ID 
-- On MINUS reduce production expr -> ID 
-- On LT reduce production expr -> ID 
-- On LEQ reduce production expr -> ID 
-- On GT reduce production expr -> ID 
-- On GEQ reduce production expr -> ID 
-- On EQ reduce production expr -> ID 
-- On AND reduce production expr -> ID 

State 8:
expr -> ID LSQUARE . expr RSQUARE [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TRUE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On ID shift to state 7
-- On FALSE shift to state 9
-- On expr shift to state 10

State 9:
expr -> FALSE . [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TIMES reduce production expr -> FALSE 
-- On SEMICOLON reduce production expr -> FALSE 
-- On RSQUARE reduce production expr -> FALSE 
-- On RPAREN reduce production expr -> FALSE 
-- On RANGE_DOTS reduce production expr -> FALSE 
-- On PLUS reduce production expr -> FALSE 
-- On OR reduce production expr -> FALSE 
-- On NEQ reduce production expr -> FALSE 
-- On MINUS reduce production expr -> FALSE 
-- On LT reduce production expr -> FALSE 
-- On LEQ reduce production expr -> FALSE 
-- On GT reduce production expr -> FALSE 
-- On GEQ reduce production expr -> FALSE 
-- On EQ reduce production expr -> FALSE 
-- On AND reduce production expr -> FALSE 

State 10:
expr -> ID LSQUARE expr . RSQUARE [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . NEQ expr [ TIMES RSQUARE PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GEQ expr [ TIMES RSQUARE PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LEQ expr [ TIMES RSQUARE PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LT expr [ TIMES RSQUARE PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GT expr [ TIMES RSQUARE PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . EQ expr [ TIMES RSQUARE PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . PLUS expr [ TIMES RSQUARE PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . MINUS expr [ TIMES RSQUARE PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . TIMES expr [ TIMES RSQUARE PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . AND expr [ TIMES RSQUARE PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . OR expr [ TIMES RSQUARE PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TIMES shift to state 11
-- On RSQUARE shift to state 13
-- On PLUS shift to state 14
-- On OR shift to state 16
-- On NEQ shift to state 18
-- On MINUS shift to state 20
-- On LT shift to state 22
-- On LEQ shift to state 24
-- On GT shift to state 26
-- On GEQ shift to state 28
-- On EQ shift to state 30
-- On AND shift to state 32

State 11:
expr -> expr TIMES . expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TRUE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On ID shift to state 7
-- On FALSE shift to state 9
-- On expr shift to state 12

State 12:
expr -> expr . NEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LT expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GT expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . EQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . PLUS expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . MINUS expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . TIMES expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr TIMES expr . [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . AND expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . OR expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TIMES reduce production expr -> expr TIMES expr 
-- On SEMICOLON reduce production expr -> expr TIMES expr 
-- On RSQUARE reduce production expr -> expr TIMES expr 
-- On RPAREN reduce production expr -> expr TIMES expr 
-- On RANGE_DOTS reduce production expr -> expr TIMES expr 
-- On PLUS reduce production expr -> expr TIMES expr 
-- On OR reduce production expr -> expr TIMES expr 
-- On NEQ reduce production expr -> expr TIMES expr 
-- On MINUS reduce production expr -> expr TIMES expr 
-- On LT reduce production expr -> expr TIMES expr 
-- On LEQ reduce production expr -> expr TIMES expr 
-- On GT reduce production expr -> expr TIMES expr 
-- On GEQ reduce production expr -> expr TIMES expr 
-- On EQ reduce production expr -> expr TIMES expr 
-- On AND reduce production expr -> expr TIMES expr 

State 13:
expr -> ID LSQUARE expr RSQUARE . [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TIMES reduce production expr -> ID LSQUARE expr RSQUARE 
-- On SEMICOLON reduce production expr -> ID LSQUARE expr RSQUARE 
-- On RSQUARE reduce production expr -> ID LSQUARE expr RSQUARE 
-- On RPAREN reduce production expr -> ID LSQUARE expr RSQUARE 
-- On RANGE_DOTS reduce production expr -> ID LSQUARE expr RSQUARE 
-- On PLUS reduce production expr -> ID LSQUARE expr RSQUARE 
-- On OR reduce production expr -> ID LSQUARE expr RSQUARE 
-- On NEQ reduce production expr -> ID LSQUARE expr RSQUARE 
-- On MINUS reduce production expr -> ID LSQUARE expr RSQUARE 
-- On LT reduce production expr -> ID LSQUARE expr RSQUARE 
-- On LEQ reduce production expr -> ID LSQUARE expr RSQUARE 
-- On GT reduce production expr -> ID LSQUARE expr RSQUARE 
-- On GEQ reduce production expr -> ID LSQUARE expr RSQUARE 
-- On EQ reduce production expr -> ID LSQUARE expr RSQUARE 
-- On AND reduce production expr -> ID LSQUARE expr RSQUARE 

State 14:
expr -> expr PLUS . expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TRUE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On ID shift to state 7
-- On FALSE shift to state 9
-- On expr shift to state 15

State 15:
expr -> expr . NEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LT expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GT expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . EQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . PLUS expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr PLUS expr . [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . MINUS expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . TIMES expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . AND expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . OR expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TIMES shift to state 11
-- On SEMICOLON reduce production expr -> expr PLUS expr 
-- On RSQUARE reduce production expr -> expr PLUS expr 
-- On RPAREN reduce production expr -> expr PLUS expr 
-- On RANGE_DOTS reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On OR reduce production expr -> expr PLUS expr 
-- On NEQ reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On LT reduce production expr -> expr PLUS expr 
-- On LEQ reduce production expr -> expr PLUS expr 
-- On GT reduce production expr -> expr PLUS expr 
-- On GEQ reduce production expr -> expr PLUS expr 
-- On EQ reduce production expr -> expr PLUS expr 
-- On AND reduce production expr -> expr PLUS expr 

State 16:
expr -> expr OR . expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TRUE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On ID shift to state 7
-- On FALSE shift to state 9
-- On expr shift to state 17

State 17:
expr -> expr . NEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LT expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GT expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . EQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . PLUS expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . MINUS expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . TIMES expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . AND expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . OR expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr OR expr . [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TIMES shift to state 11
-- On PLUS shift to state 14
-- On NEQ shift to state 18
-- On MINUS shift to state 20
-- On LT shift to state 22
-- On LEQ shift to state 24
-- On GT shift to state 26
-- On GEQ shift to state 28
-- On EQ shift to state 30
-- On SEMICOLON reduce production expr -> expr OR expr 
-- On RSQUARE reduce production expr -> expr OR expr 
-- On RPAREN reduce production expr -> expr OR expr 
-- On RANGE_DOTS reduce production expr -> expr OR expr 
-- On OR reduce production expr -> expr OR expr 
-- On AND reduce production expr -> expr OR expr 

State 18:
expr -> expr NEQ . expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TRUE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On ID shift to state 7
-- On FALSE shift to state 9
-- On expr shift to state 19

State 19:
expr -> expr . NEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr NEQ expr . [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LT expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GT expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . EQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . PLUS expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . MINUS expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . TIMES expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . AND expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . OR expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TIMES shift to state 11
-- On PLUS shift to state 14
-- On MINUS shift to state 20
-- On SEMICOLON reduce production expr -> expr NEQ expr 
-- On RSQUARE reduce production expr -> expr NEQ expr 
-- On RPAREN reduce production expr -> expr NEQ expr 
-- On RANGE_DOTS reduce production expr -> expr NEQ expr 
-- On OR reduce production expr -> expr NEQ expr 
-- On NEQ reduce production expr -> expr NEQ expr 
-- On LT reduce production expr -> expr NEQ expr 
-- On LEQ reduce production expr -> expr NEQ expr 
-- On GT reduce production expr -> expr NEQ expr 
-- On GEQ reduce production expr -> expr NEQ expr 
-- On EQ reduce production expr -> expr NEQ expr 
-- On AND reduce production expr -> expr NEQ expr 

State 20:
expr -> expr MINUS . expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TRUE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On ID shift to state 7
-- On FALSE shift to state 9
-- On expr shift to state 21

State 21:
expr -> expr . NEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LT expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GT expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . EQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . PLUS expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . MINUS expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr MINUS expr . [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . TIMES expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . AND expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . OR expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TIMES shift to state 11
-- On SEMICOLON reduce production expr -> expr MINUS expr 
-- On RSQUARE reduce production expr -> expr MINUS expr 
-- On RPAREN reduce production expr -> expr MINUS expr 
-- On RANGE_DOTS reduce production expr -> expr MINUS expr 
-- On PLUS reduce production expr -> expr MINUS expr 
-- On OR reduce production expr -> expr MINUS expr 
-- On NEQ reduce production expr -> expr MINUS expr 
-- On MINUS reduce production expr -> expr MINUS expr 
-- On LT reduce production expr -> expr MINUS expr 
-- On LEQ reduce production expr -> expr MINUS expr 
-- On GT reduce production expr -> expr MINUS expr 
-- On GEQ reduce production expr -> expr MINUS expr 
-- On EQ reduce production expr -> expr MINUS expr 
-- On AND reduce production expr -> expr MINUS expr 

State 22:
expr -> expr LT . expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TRUE shift to state 4
-- On LPAREN shift to state 5
-- On INT shift to state 6
-- On ID shift to state 7
-- On FALSE shift to state 9
-- On expr shift to state 23

State 23:
expr -> expr . NEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LEQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . LT expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr LT expr . [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . GT expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . EQ expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . PLUS expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . MINUS expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . TIMES expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . AND expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
expr -> expr . OR expr [ TIMES SEMICOLON RSQUARE RPAREN RANGE_DOTS PLUS OR NEQ MINUS LT LEQ GT GEQ EQ AND ]
-- On TIMES shift to state 11
-- On PLUS shift to state 14
-- On MINUS shift to state 20
-- On SEMICOLON reduce production expr -> expr LT expr 
-- On RSQUARE reduce production expr -> expr LT expr 
-- On RPAREN reduce production expr -> expr LT expr 
-- On RANGE_DOTS reduce production expr -> expr LT expr 
-- On OR reduce production expr -> expr LT expr 
-- On NEQ reduce production expr -> expr LT expr 
-- On LT reduce production expr -> expr LT expr 
-- On LEQ reduce production expr -> expr LT expr 
-- On GT reduce production expr -> expr LT expr 
-- On GEQ reduce production expr -> expr LT expr 
-- On EQ reduce production expr -> expr LT expr 
-- On AND reduce production expr -> expr LT expr 
